--- a/css/style.css
+++ b/css/style.css
@@ -41,3 +41,27 @@ button{
     top: 50%;
     transform: translateY(-50%);
 }
+
+#container-flex{
+    position: absolute;
+    bottom: 30px;
+    right:30px;
+    height: 100px;
+    width: 790px;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: end;
+}
+
+#titolo{
+    font-weight: bold;
+    color: white;
+    font-size: 2em;
+}
+
+#descrizione{
+    color: white;
+    font-size: 1.5em;
+    text-align: end;
+}
